# snoke

./: .gitignore  Makefile  README.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py  events.py  model_config.py  probability.py  summary.py  users.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/model/: __init__.py  bayesian.py  config_store.py  engine.py  features.py  model_config.py  nudges.py  rules.py  state_space.py  validation.py  weaning.py
backend/app/models/: event.py  user.py
backend/app/nutrition/: __init__.py  catalog.py  service.py
backend/app/schemas/: __init__.py  event.py  probability.py  summary.py  user.py
backend/app/web/: routes.py
backend/app/web/static/: app.css
backend/app/web/templates/: _dashboard_main.html  base.html  calendar.html  dashboard.html  how_it_works.html  nutrition.html  onboarding.html  progress.html  settings.html
backend/docs/: model-validation.md
backend/tests/: conftest.py  test_coach_plan.py  test_flow.py  test_health.py  test_model.py  test_model_config_api.py  test_nutrition.py  test_web.py
deploy/: Dockerfile  docker-compose.yml  nginx.conf.example  tracker.env.example
deploy/systemd/: snoke-backend.service  (+1 more)
docs/: architecture.md  deploy.md  model.md
ios/: APP_STORE_CHECKLIST.md  APP_STORE_LISTING_DE.md  APP_STORE_LISTING_EN.md  README.md  RELEASE_NOTES_TEMPLATE.md
tracker/: README.md  pyproject.toml
tracker/snoke_tracker/: __main__.py  buffer.py  collectors.py  config.py  notifier.py  poster.py
tracker/tests/: test_buffer.py  test_title_sanitiser.py
(+21 files in other folders)
